feat(form): create form component

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -14,4 +14,8 @@
   --gray: #b5b5b5;
   --gray-light: #F0F0F0;
   --gray-dark: #7e7e7e;
+
+  --red: #FF4D4D;
+  --red-dark: #FF0000;
+  --red-light: #FFBABA;
 }
